# imgui-goodies

./: .gitignore  Cargo.toml  README.md
examples/: memory.rs  notify.rs
shaders/: imgui-srgb-aware.frag  imgui.vert
src/: gfx.rs  lib.rs  renderer.rs  simple.rs  texture.rs
src/memory/: mod.rs
src/notify/: mod.rs  toast.rs
