[package]
name = "iolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemstone = "0.1.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking", "tables-api"] }
wgpu = { version = "0.12", features = ["spirv"] }
winit = "0.26.1"

[dev-dependencies]
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
