[package]
name = "imgoodies"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["renderer"]

renderer = ["wgpu", "winit"]
framework = ["renderer", "imgui-winit-support"]

[dependencies]
gemstone = "0.1.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking", "tables-api"] }
wgpu = { version = "0.12", features = ["spirv"], optional = true }
winit = { version = "0.26.1", optional = true }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", optional = true }

[[example]]
name = "notify"
required-features = ["framework"]